# ml-inference-benchmark

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cpp/: benchmark_runner.cpp  benchmark_runner.h  main.cpp
python/: compare_models.py  download_model.py  quantize_model.py  run_benchmark.py  static_quantize.py  visualize.py
